dist_man1_MANS=

if BUILD_DONALDMASKD
  dist_man1_MANS+=donaldmaskd.1
endif

if ENABLE_QT
  dist_man1_MANS+=donaldmask-qt.1
endif

if BUILD_DONALDMASK_CLI
  dist_man1_MANS+=donaldmask-cli.1
endif

if BUILD_DONALDMASK_TX
  dist_man1_MANS+=donaldmask-tx.1
endif

if BUILD_DONALDMASK_UTIL
  dist_man1_MANS+=donaldmask-util.1
endif

if ENABLE_WALLET
if BUILD_DONALDMASK_WALLET
  dist_man1_MANS+=donaldmask-wallet.1
endif
endif
